trigger release build

--- a/pom.xml
+++ b/pom.xml
@@ -2031,6 +2031,7 @@
          <build>
             <pluginManagement>
                <plugins>
+                  <!-- TODO https://www.eclipse.org/m2e/documentation/release-notes-17.html#new-syntax-for-specifying-lifecycle-mapping-metadata -->
                   <!-- http://stackoverflow.com/questions/7905501/get-rid-of-pom-not-found-warning-for-org-eclipse-m2elifecycle-mapping -->
                   <!-- This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
                   <plugin>
